--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -67,6 +67,16 @@ $lime: #b8c63f;
 $yellow: #dabc0e;
 $orange: #ff8f00;
 
+$red1: #d21111;
+$violet1: #6a1b9a;
+$blue1: #1363be;
+$cyan1: #66d9e8;
+$teal1: #2e7d32;
+$lime1: #b8c63f;
+$yellow1: #ffd900;
+$orange1: #ff8f00;
+$white1: #F0F0F2;
+
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 @import './Main.scss';
 @import './MainHeader.scss';
@@ -86,4 +96,4 @@ $orange: #ff8f00;
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap');
 @import './Ending.scss';
 @import './Setting.scss';
-
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
