--- a/src/style/_IntroFn1.scss
+++ b/src/style/_IntroFn1.scss
@@ -3,7 +3,7 @@
  
 }
 .intro_body1{
-  background-color: #dabc0e;
+  background-color: #ffd900;
   display: flex;
   position: relative;
 
@@ -14,8 +14,8 @@
 }
 .imac{
   position: absolute;
-  height: 70vh;
-  width: 48vw;
+  height: 66vh;
+  width: 45.3vw;
   left: 8vw;
   top: 15vh;
   z-index: 1;
@@ -23,7 +23,7 @@
 
 .windowcard1{
   position: relative;
-  width: 88vw;
+  width: 86vw;
   height: 50vh;
   z-index: 0;
   top:15vh;
@@ -31,9 +31,10 @@
 }
 .img_window{
   position: absolute;
-  width: 45vw;
-  height: 48vh;
+  width: 42.3vw;
+  height: 43.8vh;
   left:4.5vw;
+  top: 3.3vh;
   
 }
 .intro_Fn1_description{
@@ -57,9 +58,83 @@
 .controlcolor{
   position: absolute;
   background-color: #f0f0f2;
-  width: 48.8vw;
+  width: 48.6vw;
   height: 5.5vh;
   left:49.8vw;
   top:91.55vh;
 
+}
+
+
+
+
+
+
+@media all and (max-width:767px) {
+  .intro_Fn1{
+    height: 90h;
+   
+  }
+  .intro_body1{
+    background-color: #ffd900;
+    display: flex;
+    position: relative;
+    height: 80vh;
+    width: 95.8vw;
+    margin-top: 1.5vh;
+    margin-left: 2vw;
+    margin-right: 2vw;
+  }
+  .imac{
+    position: absolute;
+    height: 35vh;
+    width: 80vw;
+    left: 7.8vw;
+    top: 37.2vh;
+    z-index: 1;
+  }
+  
+  .windowcard1{
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    z-index: 0;
+    top:8vh;
+  }
+  .img_window{
+    position: absolute;
+    width: 76vw;
+    height: 22.8vh;
+    left:4.5vw;
+    top: 30.9vh;
+    
+  }
+  .intro_Fn1_description{
+    position: absolute;
+    font-size: 9vw;
+    left:5vw;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 800;
+    top: 0vh;
+    color:#1D1E20;
+  
+  }
+  .intro_Fn1_description2{
+    position: absolute;
+    font-size: 3vw;
+    top:20vh;
+    left: 5vw;
+    font-family: 'Noto Sans KR', sans-serif;
+    color:#1D1E20;
+  }
+  .controlcolor{
+    position: absolute;
+    background-color: #f0f0f2;
+    width: 95.7vw;
+    height: 5.5vh;
+    left:0.1vw;
+    top:81.2vh;
+  
+  }
+  
 }
