--- a/src/style/_MainSelected.scss
+++ b/src/style/_MainSelected.scss
@@ -125,7 +125,7 @@
     height: 80%;
     display: flex;
     flex-direction: column;
-    text-align: center;
+    align-items: center;
     overflow-y: scroll;
   }
   .list-single {
