--- a/src/style/_Setting.scss
+++ b/src/style/_Setting.scss
@@ -35,8 +35,8 @@
     margin-bottom: 20px;
     & .title {
       font-weight: bold;
-      margin-top: 20px;
-      margin-bottom: 0px;
+      margin-top: 10px;
+      margin-bottom: 10px;
     }
     & .content {
       width: 100%;
@@ -50,7 +50,6 @@
   & .name-container {
     width: 60%;
     margin-bottom: 20px;
-    margin-top: 10px;
     & .title {
       font-weight: bold;
       margin-bottom: 10px;
@@ -220,5 +219,48 @@
   }
   &.back, &.logout {
     margin-top: 10px;
+  }
+}
+
+@media all and (max-width: 800px) {
+  .setting-container {
+    width: 300px;
+  }
+
+  .setting-userinfo {
+    margin-left: 25px;
+  }
+
+  .setting-general {
+    left: -35px;
+    margin-left: 25px;
+    &-title {
+      margin-left: -30px;
+    }
+  }
+
+  .togeneral {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    display: flex;
+    flex-direction: row;
+    &:focus {
+      outline: none;
+    }
+    &:active {
+      & img {
+        opacity: 0.8;
+      }
+    }
+    & img {
+      width: 20px;
+      opacity: 0.5;
+    }
+    & p {
+      font-size: 11px;
+      margin-top: 20px;
+      margin-right: 5px;
+    }
   }
 }
