--- a/src/style/_MainFav.scss
+++ b/src/style/_MainFav.scss
@@ -277,6 +277,9 @@
   &.teal {
     box-shadow: inset 10px 0px 10px 0px $teal;
   }
+  &.pink {
+    box-shadow: inset 10px 0px 10px 0px $pink;
+  }
   &.random {
     display: none;
   }
