--- a/src/style/_Ending.scss
+++ b/src/style/_Ending.scss
@@ -12,13 +12,15 @@
   }
   &.title {
     font-size: 35px;
-    margin-top: 110px;
+    margin-top: 150px;
     font-weight: bold;
   }
   &.description {
     font-size: 25px;
-    margin-top: 70px;
+    margin-top: 100px;
     text-align: center;
+    font-family: sans-serif;
+    font-weight: lighter;
   }
   &.exit {
     width: 120px;
@@ -26,21 +28,10 @@
     border: none;
     border-radius: 10px;
     background: rgba(255, 255, 255, 0.349);
-    margin-top: 30px;
+    margin-top: 50px;
     cursor: pointer;
     &:focus {
       outline: none;
-    }
-  }
-  &.share {
-    margin-top: 30px;
-    & p{
-      font-size: 20px;
-      font-weight: bold;
-    }
-    &.icons {
-      display: flex;
-      flex-direction: row;
     }
   }
   &.name {
@@ -50,5 +41,31 @@
     font-size: 14px;
     font-weight: thin;
     margin-top: 10px;
+  }
+}
+
+@media all and (max-width: 800px) {
+
+  .ending {
+    &.title {
+      font-size: 23px;
+      margin-top: 90px;
+    }
+    &.description {
+      font-size: 18px;
+      margin-top: 140px;
+    }
+    &.exit {
+      margin-top: 100px;
+    }
+    &.name {
+      font-size: 12px;
+      text-align: center;
+      margin-top: 60px;
+    }
+    &.copyright {
+      font-size: 12px;
+      margin-top: 30px;
+    }
   }
 }
