[Client] <feature>: Add transition event
인트로 -> 메인 이동 시 트랜지션 이벤트가 추가되었습니다

--- a/src/style/_IntroMain.scss
+++ b/src/style/_IntroMain.scss
@@ -119,6 +119,17 @@
   left:35vw;
 }
 
+.fadein {
+  position: absolute;
+  width: 100vw;
+  height: 200vh;
+  top: -100vh;
+  left: 100vw;
+  background-color: $blue;
+  z-index: 100;
+  transition: left 0.2s cubic-bezier(0.6, 0.04, 0.98, 0.335);
+}
+
 
 
 
