--- a/src/style/_IntroFn3.scss
+++ b/src/style/_IntroFn3.scss
@@ -338,7 +338,7 @@
   .intro_describe3-2{
     position: absolute;
     color:white;
-    font-size: 0.9vw;
+    font-size: 12px;
     top:15vh;
     font-family: 'Noto Sans KR', sans-serif;
   }
@@ -354,7 +354,7 @@
   .intro_describe4-2{
     position: absolute;
     color:black;
-    font-size: 0.9vw;
+    font-size: 12px;
     top:15vh;
     font-family: 'Noto Sans KR', sans-serif;
     z-index: 999;
