--- a/src/style/_IntroFn2.scss
+++ b/src/style/_IntroFn2.scss
@@ -96,7 +96,7 @@
   position: absolute;
   top:45vh;
   width: 35vw;
-  height: 10vh;
+  height: 10.2vh;
 }
 
 .fav-single2{
@@ -112,7 +112,7 @@
   align-items: center;
   cursor: pointer;
   &:hover {
-    width: 9.5vw;
+    width: 8.1vw;
     height: 10.2vh;
     background-color: rgba(255, 255, 255, 0.438);
     box-shadow: 2px 4px 7px 2px rgba(95, 95, 95, 0.11);
@@ -298,7 +298,7 @@
   .fav-icons-desc2{
     @include iconNav2;
     color: white;
-    font-size: 1vw;
+    font-size: 10px;
   }
   .fav-icons-add2{
     @include iconNav;
@@ -360,18 +360,18 @@
   }
   
   .fav-img2{
-    height: 7vh;
+    height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
     & img {
       width: auto;
-      height: 4vh;
+      height: 40px;
     }
   }
   .fav-desc2{
     color: white;
-    font-size: 0.1vw;
+    font-size: 13px;
   }
   .intro_describe1{
     position: absolute;
@@ -383,7 +383,7 @@
   .intro_describe1-2{
     position: absolute;
     color:white;
-    font-size: 0.9vw;
+    font-size: 12px;
     top:15vh;
     font-family: 'Noto Sans KR', sans-serif;
   }
@@ -398,7 +398,7 @@
   .intro_describe2-2{
     position: absolute;
     color:black;
-    font-size: 0.9vw;
+    font-size: 12px;
     top:15vh;
     font-family: 'Noto Sans KR', sans-serif;
   }
